Fix(S) fonts and input field on firefox

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ html, body {
 	font-size:12px; 
 	line-height:18px;
 	height: 100%;
-	font-family: "PTSans", sans-serif;
+	font-family: "PT Sans", sans-serif;
 	background-color: #212327;
 	color: #fff;
  }
@@ -383,7 +383,7 @@ a{
 					.search-champion .search-field {
 						width: 100%;
 						height: 35px;
-						padding-left: 30px;
+						margin-left: 35px;
 						background-color: transparent;
 						color: #fff;
 						font-family: "PT Sans";
@@ -393,7 +393,7 @@ a{
 
 					.search-champion button {
 						position: absolute;
-						left: 6px;
+						left: 2px;
 						top: 6px;
 						background-color: #3A3C42;
 						border: none;
@@ -611,14 +611,14 @@ a{
 		}
 
 			.search-bar input {
-				background: transparent;
+				background-color: transparent;
 				border: none;
 				height: 70px;
 				width: 100%;
 				padding-left: 80px;
 				padding-right: 10px;
 				outline: none;
-				font-family: PTSans-Regular;
+				font-family: "PT Sans";
 				font-size: 16px;
 				color: #FFFFFF;
 			}
@@ -1548,7 +1548,7 @@ a{
 									padding: 10px 20px;
 									box-sizing: border-box;
 									color: #fff;
-									font-family: PTSans-Regular;
+									font-family: "PT Sans";
 									outline: none;
 								}
 
